--- a/Interferometry/package.json
+++ b/Interferometry/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/geolocation": "^3.1.0",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.18",
     "@rnmapbox/maps": "^10.0.15",
     "mapbox-gl": "^2.15.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-maps": "^1.7.1",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
     "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
