--- a/Interferometry/android/app/build.gradle
+++ b/Interferometry/android/app/build.gradle
@@ -1,5 +1,10 @@
-apply plugin: "com.android.application"
-apply plugin: "com.facebook.react"
+plugins {
+    id 'com.android.application'
+    id 'com.facebook.react'
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
+}
+
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -118,6 +123,19 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
 }
+
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
