--- a/Interferometry/android/app/build.gradle
+++ b/Interferometry/android/app/build.gradle
@@ -135,7 +135,12 @@ dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
 
-    implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation(project(':react-native-maps')){
+        exclude group: 'com.google.android.gms'
+    }
+    implementation 'com.google.android.gms:play-services-base:18.0.1'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
 
 
 
