--- a/Interferometry/android/app/src/main/AndroidManifest.xml
+++ b/Interferometry/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <application
@@ -16,7 +17,7 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme">
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
+            android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCI_dPHXtV2o1ZXa6SsEW7LxzLJNUloMPk"/>
       <activity
         android:name=".MainActivity"
